--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<h1>Hello</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="main.css" rel="stylesheet">
+    <title>Document</title>
+</head>
+<body>
+<header class="header">
+    <h1 class="">The litle gift for you</h1>
+</header>
+<nav>
+
+</nav>
+</body>
+</html>
