--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 <header class="header">
     <h1 class="">The litle gift for you</h1>
+    <img src="/img/ alt="Photo">
 </header>
 <nav>
 
