--- a/index.html
+++ b/index.html
@@ -5,15 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="main.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
 <header class="header">
-    <h1 class="">The litle gift for you</h1>
-    <img src="/img/ alt="Photo">
+    <img src="/img/g1.jpg" alt="Photo">
+    <h1 class="slogan">Это маленький подарок для тебя</h1>
+    <img src="/img/g2.jpg" alt="Photo">
 </header>
-<nav>
-
-</nav>
+<div class="humster">
+    <img src="/img/Jupiter1.jpg">
+    <img src="/img/Jupiter2.jpg">
+    <img src="/img/Jupiter3.jpg">
+    <img src="/img/Jupiter4.jpg">
+    <img src="/img/Jupiter5.jpg">
+    <img src="/img/Jupiter6.jpg">
+</div>
+<div class="ourphoto">
+    <img src="/img/g1.jpg">
+    <img src="/img/g2.jpg">
+    <img src="/img/g3.jpg">
+    <img src="/img/g4.jpg">
+    <img src="/img/g5.jpg">
+</div>
 </body>
 </html>
